[package]
name = "cuber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
nom = "7.1.3"
num-derive = "0.4.0"
num-traits = "0.2.16"
tokio = { version = "1.32.0", features = ["full"] }
uuid = "1.4.1"
