[package]
name = "cuber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.0"
byteorder = "1.4.3"
hematite-nbt = "0.5.2"
nom = "7.1.3"
num-derive = "0.4.0"
num-traits = "0.2.16"
tokio = { version = "1.32.0", features = ["full"] }
uuid = "1.4.1"

deriver = { path = "./deriver" }
packet_id = { version = "0.1.0", path = "./packet_id" }
array-macro = "2.1.5"
serde_json = "1.0.107"
structstruck = "0.4.1"
paste = "1.0.14"
bitfield = "0.14.0"
